// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DevelopersTable should render component with developers 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <div
        class="mock-css.
  margin-bottom: 2.5rem;
"
      >
        <mock-styled.h2
          classname=""
        >
          Total Developers
        </mock-styled.h2>
        <mock-styled.p
          classname="mock-css."
        >
          1
        </mock-styled.p>
        <mock-styled.div
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="7"
        >
          <mock-styled.div>
            <mock-styled.div>
              Company Name
            </mock-styled.div>
            <mock-styled.div>
              Developer Name
            </mock-styled.div>
            <mock-styled.div>
              Developer Email
            </mock-styled.div>
            <mock-styled.div>
              Job Title
            </mock-styled.div>
            <mock-styled.div>
              Account Status
            </mock-styled.div>
            <mock-styled.div>
              Created Date
            </mock-styled.div>
            <mock-styled.div>
              Agreed Terms Date
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.span
                classname="mock-css. mock-css.
  font-size: 1.5rem;
"
              >
                <svg />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.div
                  data-narrow-label="Company Name"
                >
                  Reapit Sales
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.div
                  data-narrow-label="Developer Name"
                >
                  Sales Team
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.div
                  data-narrow-label="Developer Email"
                >
                  test@example.com
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.div
                  data-narrow-label="Job Title"
                />
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.div
                  data-narrow-label="Account Status"
                >
                  confirmed
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.div
                  data-narrow-label="Created Date"
                >
                  03 Mar 2022 10:18
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.div
                  data-narrow-label="Agreed Terms Date"
                >
                  -
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.span
                  classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div
                    classname="mock-css."
                  >
                    <mock-styled.button
                      classname="mock-css."
                      disabled="true"
                      type="button"
                    >
                      <mock-styled.div />
                      Update Status
                    </mock-styled.button>
                    <mock-styled.button
                      classname="mock-css."
                      disabled="true"
                      type="button"
                    >
                      <mock-styled.div />
                      DevEdition is Free
                    </mock-styled.button>
                    <mock-styled.button
                      classname="mock-css."
                      disabled="true"
                    >
                      <mock-styled.div />
                      Toggle Subscription 
                    </mock-styled.button>
                    <mock-styled.button
                      classname="mock-css."
                      disabled="true"
                    >
                      <mock-styled.div />
                      Invite Member
                    </mock-styled.button>
                    <mock-styled.button
                      classname="mock-css."
                    >
                      <mock-styled.div />
                      Fetch Members
                    </mock-styled.button>
                    <mock-styled.button
                      classname="mock-css."
                    >
                      <mock-styled.div />
                      Fetch Apps
                    </mock-styled.button>
                    <mock-styled.button
                      classname="mock-css."
                      disabled="true"
                      type="button"
                    >
                      <mock-styled.div />
                      Delete Developer
                    </mock-styled.button>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <div
      class="mock-css.
  margin-bottom: 2.5rem;
"
    >
      <mock-styled.h2
        classname=""
      >
        Total Developers
      </mock-styled.h2>
      <mock-styled.p
        classname="mock-css."
      >
        1
      </mock-styled.p>
      <mock-styled.div
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="7"
      >
        <mock-styled.div>
          <mock-styled.div>
            Company Name
          </mock-styled.div>
          <mock-styled.div>
            Developer Name
          </mock-styled.div>
          <mock-styled.div>
            Developer Email
          </mock-styled.div>
          <mock-styled.div>
            Job Title
          </mock-styled.div>
          <mock-styled.div>
            Account Status
          </mock-styled.div>
          <mock-styled.div>
            Created Date
          </mock-styled.div>
          <mock-styled.div>
            Agreed Terms Date
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="mock-css. mock-css.
  font-size: 1.5rem;
"
            >
              <svg />
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Company Name"
              >
                Reapit Sales
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Developer Name"
              >
                Sales Team
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Developer Email"
              >
                test@example.com
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Job Title"
              />
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Account Status"
              >
                confirmed
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Created Date"
              >
                03 Mar 2022 10:18
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Agreed Terms Date"
              >
                -
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.span
                classname="mock-css. mock-css.
  font-size: 1.5rem;
"
              >
                <svg />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.button
                    classname="mock-css."
                    disabled="true"
                    type="button"
                  >
                    <mock-styled.div />
                    Update Status
                  </mock-styled.button>
                  <mock-styled.button
                    classname="mock-css."
                    disabled="true"
                    type="button"
                  >
                    <mock-styled.div />
                    DevEdition is Free
                  </mock-styled.button>
                  <mock-styled.button
                    classname="mock-css."
                    disabled="true"
                  >
                    <mock-styled.div />
                    Toggle Subscription 
                  </mock-styled.button>
                  <mock-styled.button
                    classname="mock-css."
                    disabled="true"
                  >
                    <mock-styled.div />
                    Invite Member
                  </mock-styled.button>
                  <mock-styled.button
                    classname="mock-css."
                  >
                    <mock-styled.div />
                    Fetch Members
                  </mock-styled.button>
                  <mock-styled.button
                    classname="mock-css."
                  >
                    <mock-styled.div />
                    Fetch Apps
                  </mock-styled.button>
                  <mock-styled.button
                    classname="mock-css."
                    disabled="true"
                    type="button"
                  >
                    <mock-styled.div />
                    Delete Developer
                  </mock-styled.button>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DevelopersTable should render component with no developers 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <div
        class="mock-css.
  margin-bottom: 2.5rem;
"
      >
        <mock-styled.div
          classname="mock-css. mock-css. mock-css. mock-css."
        >
          <div
            class="mock-css.
  padding-left: 0.75rem;
  display: flex;
  align-items: center;
  border-radius: var(--default-border-radius) 0 0 var(--default-border-radius);
  cursor: pointer;

  , {
    color: var(--color-white);
  }
"
            data-testid="close-icon"
          >
            <mock-styled.span
              classname="mock-css.
  font-size: 1.5rem;
"
              style="font-size: 1.25rem;"
            >
              <svg
                style="font-size: 1.25rem;"
              />
            </mock-styled.span>
          </div>
          <div
            class="mock-css.
  padding: 0.75rem;
  transition: 0.5s;
  width: 100%;
  color: var(--color-black);
  font-size: var(--font-size-default);
"
          >
            No results found for your selected filters
          </div>
        </mock-styled.div>
      </div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <div
      class="mock-css.
  margin-bottom: 2.5rem;
"
    >
      <mock-styled.div
        classname="mock-css. mock-css. mock-css. mock-css."
      >
        <div
          class="mock-css.
  padding-left: 0.75rem;
  display: flex;
  align-items: center;
  border-radius: var(--default-border-radius) 0 0 var(--default-border-radius);
  cursor: pointer;

  , {
    color: var(--color-white);
  }
"
          data-testid="close-icon"
        >
          <mock-styled.span
            classname="mock-css.
  font-size: 1.5rem;
"
            style="font-size: 1.25rem;"
          >
            <svg
              style="font-size: 1.25rem;"
            />
          </mock-styled.span>
        </div>
        <div
          class="mock-css.
  padding: 0.75rem;
  transition: 0.5s;
  width: 100%;
  color: var(--color-black);
  font-size: var(--font-size-default);
"
        >
          No results found for your selected filters
        </div>
      </mock-styled.div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
